--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-	"name": "test",
-	"version": "0.0.1",
-	"dependencies": {
-		"johnny-five": "latest"
-	}
+  "name": "test",
+  "version": "0.0.1",
+  "dependencies": {
+    "chalk": "^1.1.3",
+    "johnny-five": "latest",
+    "moment": "^2.17.1"
+  }
 }
