--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "johnny-five": "latest",
     "moment": "^2.17.1",
     "socket.io": "^1.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
