--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "test",
   "version": "0.0.1",
+  "scripts": {
+    "start" : "start cmd.exe /K nodemon server.js"
+  },
   "dependencies": {
     "chalk": "^1.1.3",
     "express": "^4.14.0",
