--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test",
   "version": "0.0.1",
   "scripts": {
-    "start" : "start cmd.exe /K nodemon server.js"
+    "start" : "nodemon server.js"
   },
   "dependencies": {
     "chalk": "^1.1.3",
